// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ogf patch reports should report a dry run as one that wrote nothing 1`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "ogf",
    "patch-motion-refs",
  ],
  "duration": "<duration>",
  "error": null,
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "discardedSize": 0,
    "isDryRun": true,
    "originalSize": 13841,
    "patchedCount": 1,
    "patchedSize": 13839,
  },
}
`;

exports[`ogf patch reports should report what a motion-refs patch rewrote 1`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "ogf",
    "patch-motion-refs",
  ],
  "duration": "<duration>",
  "error": null,
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "discardedSize": 0,
    "isDryRun": false,
    "originalSize": 13841,
    "patchedCount": 1,
    "patchedSize": 13839,
  },
}
`;

exports[`ogf patch reports should report what a texture-refs patch rewrote 1`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "ogf",
    "patch-texture-refs",
  ],
  "duration": "<duration>",
  "error": null,
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "discardedSize": 0,
    "isDryRun": false,
    "originalSize": 13841,
    "patchedCount": 1,
    "patchedSize": 13849,
  },
}
`;
